# win-control

./: CHANGELOG.md  Cargo.toml  README.md
.github/instructions/: copilot.instructions.md
.github/workflows/: release.yml
src/: main.rs  mcp.rs
