[package]
name = "win-control"
version = "0.1.0"
edition = "2024"

[dependencies]
# For MCP JSON API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# For switching Windows audio devices
windows = { version = "0.62.2", features = ["Win32_Devices", "Win32_Devices_Properties", "Win32_Devices_FunctionDiscovery", "Win32_System_Variant", "Win32_Media_Audio", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_Storage_StructuredStorage" ]}

clap = { version = "4", features = ["derive"] }